--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
     </div>
     <div class="bg-violet-400 fixed top-0 left-0 right-0 bottom-0 flex items-center justify-center" id="modal">
         <div class="bg-white mx-3 p-10 rounded-lg shadow-lg">
-          <h2 class="text-lg font-bold mb-5 text-violet-400">Welcome to Idol!</h2>
+          <h2 class="text-lg font-bold mb-5 text-violet-400">Welcome Idol!</h2>
           <p class="text-gray-400 mb-10">Mag subscribe kana! , at sumali kana din sa community  &#128156; &#128156; &#128156;...</p>
           <button class="bg-violet-400 text-white px-4 py-2 rounded-md hover:opacity-80" id="closeModal">Connect</button>
         </div>
