--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="output.css">
 </head>
+
 <body class="font-serif">
     <div class="bg-red-0 w-80 max-w-xl mx-auto h-screen">
         <div class="w-auto mx-auto h-auto">
@@ -22,11 +23,9 @@
                 <button
                     class="bg-violet-600 shadow-indigo-500/50 text-white px-3.5 py-1.5 rounded-md  hover:bg-white hover:text-violet-400 transition-all ease-in-out duration-200">Message</button>
                 <button
-                    class="bg-white shadow-indigo-500/50 text-violet-400 border border-violet-400-400 px-3.5 py-1.5 rounded-md hover:bg-white hover:text-violet-400">About</button> 
+                    class="bg-white shadow-indigo-500/50 text-violet-400 border border-violet-400-400 px-3.5 py-1.5 rounded-md hover:bg-white hover:text-violet-400">About</button>
             </div>
             <div class=" w-auto border mt-6"></div>
-
-
             <div class="h-auto flex border-l-2 border-gray-0 mt-8">
                 <div class="ml-1.5">
                     <p class="text-sm  text-gray-300">Name: Jerome Edica</p>
@@ -56,12 +55,14 @@
     </div>
     <div class="bg-violet-400 fixed top-0 left-0 right-0 bottom-0 flex items-center justify-center" id="modal">
         <div class="bg-white mx-3 p-5 rounded-lg shadow-lg">
-          <h2 class="text-lg font-bold mb-5 text-violet-400">Welcome Idol!</h2>
-          <p class="text-gray-400 mb-10">Mag subscribe kana! , at sumali kana din sa community  &#128156; &#128156; &#128156;...</p>
-          <button class="bg-violet-400 text-white px-4 py-2 rounded-md hover:opacity-80" id="closeModal">Connect</button>
+            <h2 class="text-lg font-bold mb-5 text-violet-400">Welcome Idol!</h2>
+            <p class="text-gray-400 mb-10">Mag subscribe kana! , at sumali kana din sa community &#128156; &#128156;
+                &#128156;...</p>
+            <button class="bg-violet-400 text-white px-4 py-2 rounded-md hover:opacity-80"
+                id="closeModal">Connect</button>
         </div>
-      </div>
-      
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
